# electronics-rag-assistant

./: .env.example  .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
backend/: README.md
backend/src/electronics_rag_assistant_backend/: __init__.py  dependencies.py  main.py  settings.py
backend/src/electronics_rag_assistant_backend/api/: __init__.py  app.py
backend/src/electronics_rag_assistant_backend/api/routes/: assistant.py  catalog.py  health.py  products.py
backend/src/electronics_rag_assistant_backend/catalog/: __init__.py  categories.py  normalization.py
backend/src/electronics_rag_assistant_backend/indexing/: __init__.py  document_builder.py  openai_embedder.py  qdrant_product_index.py
backend/src/electronics_rag_assistant_backend/query/: __init__.py  parser.py
backend/src/electronics_rag_assistant_backend/retrieval/: __init__.py  filter_builder.py
backend/src/electronics_rag_assistant_backend/services/: assistant_service.py  catalog_index.py  catalog_search.py  catalog_sync.py  grounded_answer.py  query_analysis.py
backend/src/electronics_rag_assistant_backend/source/: bestbuy_client.py
backend/src/electronics_rag_assistant_backend/storage/: __init__.py  sqlite_catalog_repository.py
data/raw/: mediaexpert_laptops.csv
frontend/: README.md  __init__.py  api_client.py  app.py  ui_state.py
infra/: README.md  docker-compose.yml
scripts/: run_rag_demo.sh
shared/: README.md
shared/src/electronics_rag_assistant_shared/: __init__.py  catalog.py  search.py
src/mediaexpert_laptops/: __init__.py  scraper.py
src/mediaexpert_laptops/rag/: __init__.py  answer.py  app.py  cli.py  embedding.py  index.py  models.py  normalization.py  query_analysis.py  repository.py  search.py  settings.py  ui.py
tests/: README.md  test_assistant_api.py  test_assistant_service.py  test_bestbuy_client.py  test_catalog_api.py  test_catalog_index_service.py  test_catalog_normalization.py  test_catalog_sync_service.py  test_document_builder.py  test_filter_builder.py  test_frontend_api_client.py  test_frontend_ui_state.py  test_grounded_answer_service.py  test_health.py  test_openai_embedder.py  test_qdrant_product_index.py  test_query_analysis_service.py  test_query_parser.py  test_rag_api.py  test_rag_index.py  test_rag_normalization.py  test_rag_query_analysis.py  test_rag_repository.py  test_rag_search.py  test_rag_ui.py  test_scraper.py  test_search_service.py  test_sqlite_catalog_repository.py
