[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "electronics-rag-assistant"
version = "0.1.0"
description = "Laptop dataset scraper for a RAG shopping assistant prototype."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12.0,<5.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "openai>=1.75.0,<2.0.0",
  "playwright>=1.49.0,<2.0.0",
  "pydantic-settings>=2.8.0,<3.0.0",
  "qdrant-client>=1.13.0,<2.0.0",
  "requests>=2.32.0,<3.0.0",
  "streamlit>=1.44.0,<2.0.0",
  "uvicorn[standard]>=0.34.0,<1.0.0",
]

[project.scripts]
scrape-mediaexpert-laptops = "mediaexpert_laptops.scraper:main"
import-laptops = "mediaexpert_laptops.rag.cli:import_catalog_main"
index-laptops = "mediaexpert_laptops.rag.cli:index_catalog_main"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "ruff>=0.11.0,<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mediaexpert_laptops"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
